Fix for #60:Expand/Collapse button confusion with unread items
git-svn-id: http://svn.gregarius.net/svn/trunk/rss@691 d826556c-87f9-0310-90b4-9554b5b11594

--- a/themes/default/css/layout.css
+++ b/themes/default/css/layout.css
@@ -11,6 +11,7 @@ h2 {  margin: 0; }
 h3 {
  padding: 0 5px;
  margin: 20px 0 0 0;
+ clear:right;
 }
   
 h3 img,h3 img { vertical-align: 10% }  
